Adding client side code changes from PR https://github.com/appsmithorg/appsmith-ee/pull/3938